# ChangeLog of Nadoka($Rev$)
# $Id$ 

2010-01-25  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc: update Servers.
	  see http://www.wide.ad.jp/news/press/20100125-IRC-server-close-j.html
	  and http://www.ircnet.ne.jp/ .

2010-01-01  Koichi Sasada <ko1@atdot.net>

	* plugins/googlebot.nb: support new searcher calc and code.

	* plugins/googlebot.nb: support abbreviated syntax (ex: g> ).

2009-11-30  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc: update Servers.
	  see http://twitter.com/ircnet_fujisawa/status/6185537849 for irc6.fujisawa.wide.ad.jp,
	  and http://en.wikipedia.org/wiki/IRCd says most often used port for SSL is 6697.

2009-11-08  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc: update Servers.
	  see http://slashdot.jp/it/article.pl?sid=09/11/06/0747210

2009-10-23  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: fallback to json gem.

2009-09-22  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/server.rb (Nadoka::NDK_Server#server_main_proc): support
	RPL_ISUPPORT.

2009-09-22  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/error.rb: add Nadoka::NDK_InvalidMessage.

	* ndk/server.rb (Nadoka::NDK_Server#send_to_server): check [\r\n].

2009-09-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* rice/irc.rb: remove magic comment. ruby 1.9.2 works without it.


2009-09-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* 0.7.2: released

	* ndk/version.rb: bumped version to 0.7.5.

2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: use hl because lr used by web searcher only.

2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: support more searcher of Google AJAX
	Search API.

2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: use Google AJAX Search API.
	see http://code.google.com/intl/ja/apis/ajaxsearch/ for detail.

2009-09-14  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: Google SOAP Search API (No Longer Available).